# tandem-SeisSol-bridge

./: README.md  bridge.py  domain_bridge.py  domain_reader.py  dubiner.py  dubiner_tet.py  face_match.py  fault_bridge.py  field_scalar.py  pyproject.toml  rotation.py  seissol_mesh_reader.py  tandem_domain_reader.py  tandem_fault_reader.py
tandem-to-seissol/: __init__.py  patcher.py  pyproject.toml
tandem-to-seissol/data/: dr_stroud_points.json
tandem_to_seissol/: basis_map.py  bridge.py  domain_bridge.py  dubiner.py  fault_bridge.py  field_tensor.py  field_vector.py  tandem_domain_reader.py
tandem_to_seissol/data/: dr_padding.json
tandem_to_seissol/example/: domain_7.pvtu  domain_7_0.vtu  fault_7.pvtu  fault_7_0.vtu  seissol_mesh.h5
