[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "tandem-to-SeisSol"
version = "0.1.0"
description = "Convert tandem quasi-dynamic fault/domain VTU output into a patched SeisSol HDF5 checkpoint."
requires-python = ">=3.10"
dependencies = [
    "numpy",
    "scipy",
    "h5py",
    "meshio",
]

[project.optional-dependencies]
plot = ["matplotlib"]

[project.scripts]
tandem-to-seissol = "tandem_to_seissol.bridge:main"
tandem-to-seissol-fault = "tandem_to_seissol.fault_bridge:main"
tandem-to-seissol-domain = "tandem_to_seissol.domain_bridge:main"

[tool.setuptools]
packages = ["tandem_to_seissol"]

[tool.setuptools.package-data]
tandem_to_seissol = ["data/*.json"]
